--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  fl_chart: ^0.10.0
+  flutter_dialogflow: ^0.1.2
   gradient_app_bar: ^0.0.1
   flutter:
     sdk: flutter
@@ -43,7 +45,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/credentials.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
